--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -285,7 +285,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ldap</artifactId>
-            <version>3.1.2</version>
+            <version>3.1.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
 
