--- a/jahia-packages-parent/pom.xml
+++ b/jahia-packages-parent/pom.xml
@@ -49,7 +49,7 @@
   <parent>
       <groupId>org.jahia.server</groupId>
       <artifactId>jahia-pack-root</artifactId>
-      <version>7.2.2.0-backlog_7328-SNAPSHOT</version>
+      <version>7.2.2.0-SNAPSHOT</version>
   </parent>
   <groupId>org.jahia.packages</groupId>
   <artifactId>jahia-packages-parent</artifactId>
