--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -163,7 +163,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>module-manager</artifactId>
-            <version>1.1.2-backlog_7328-SNAPSHOT</version>
+            <version>1.1.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -235,7 +235,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>2.1.3-backlog_7328-SNAPSHOT</version>
+            <version>2.1.3-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
