--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -256,6 +256,14 @@
             <version>7.1.2</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>graphql-dxm-provider</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <!-- End of graphql bundles -->
+
     </dependencies>
 
     <build>
