--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -101,13 +101,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider</artifactId>
-            <version>3.0.8-SNAPSHOT</version>
+            <version>3.0.8</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-modules</artifactId>
-            <version>3.0.8-SNAPSHOT</version>
+            <version>3.0.8</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -119,7 +119,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-vfs</artifactId>
-            <version>3.0.8-SNAPSHOT</version>
+            <version>3.0.8</version>
        </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
@@ -186,13 +186,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>serverSettings</artifactId>
-            <version>7.1.7-SNAPSHOT</version>
+            <version>7.1.7</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>siteSettings</artifactId>
-            <version>7.1.8-SNAPSHOT</version>
+            <version>7.1.8</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
