--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -204,6 +204,12 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
+            <artifactId>site-settings-publication</artifactId>
+            <version>1.0.0</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
             <artifactId>skins</artifactId>
             <version>7.1.1</version>
             <scope>runtime</scope>
