--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -131,7 +131,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>graphql-dxm-provider</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
