--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -169,7 +169,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>module-manager</artifactId>
-            <version>1.1.2-SNAPSHOT</version>
+            <version>1.1.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -199,13 +199,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>serverSettings</artifactId>
-            <version>8.0.2-SNAPSHOT</version>
+            <version>8.0.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>siteSettings</artifactId>
-            <version>7.2.4-SNAPSHOT</version>
+            <version>7.2.4</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -247,7 +247,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>2.1.3-SNAPSHOT</version>
+            <version>2.1.3</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -259,7 +259,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>visibility</artifactId>
-            <version>7.1.3-SNAPSHOT</version>
+            <version>7.1.3</version>
             <scope>runtime</scope>
         </dependency>
 
