--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -247,7 +247,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>2.1.3</version>
+            <version>2.1.4-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
