--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -229,6 +229,23 @@
             <type>jar</type>
             <scope>runtime</scope>
         </dependency>
+
+        <!-- New Vanity URL dashboard -->
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>react-dxcomponents</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <type>jar</type>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>seoSettings</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <type>jar</type>
+            <scope>runtime</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
