--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -240,7 +240,7 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
-            <artifactId>seoSettings</artifactId>
+            <artifactId>site-settings-seo</artifactId>
             <version>1.0.0-SNAPSHOT</version>
             <type>jar</type>
             <scope>runtime</scope>
