--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -169,7 +169,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>module-manager</artifactId>
-            <version>1.1.2</version>
+            <version>1.1.3-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
