--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -205,7 +205,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>siteSettings</artifactId>
-            <version>7.2.4</version>
+            <version>7.2.5-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
