--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -148,10 +148,16 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>security-filter</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <!-- RESTful API -->
             <groupId>org.jahia.modules</groupId>
             <artifactId>jcrestapi</artifactId>
-            <version>2.3.1</version>
+            <version>2.3.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
