--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -324,13 +324,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>blog</artifactId>
-            <version>3.0.2</version>
+            <version>3.0.3-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>forum</artifactId>
-            <version>3.0.2</version>
+            <version>3.1.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
