--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -157,7 +157,7 @@
             <!-- RESTful API -->
             <groupId>org.jahia.modules</groupId>
             <artifactId>jcrestapi</artifactId>
-            <version>2.3.2-SNAPSHOT</version>
+            <version>2.3.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
