--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -90,7 +90,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>default</artifactId>
-            <version>7.2.4-SNAPSHOT</version>
+            <version>7.2.4</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -187,7 +187,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>rolesmanager</artifactId>
-            <version>7.1.5-SNAPSHOT</version>
+            <version>7.1.5</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -241,7 +241,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tasks</artifactId>
-            <version>7.1.4-SNAPSHOT</version>
+            <version>7.1.4</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
