--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -119,6 +119,12 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
+            <artifactId>graphql-dxm-provider</artifactId>
+            <version>1.0.2-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
             <artifactId>jcr-webdav</artifactId>
             <version>1.0.1</version>
             <scope>runtime</scope>
