--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -180,13 +180,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>bootstrap3-components</artifactId>
-            <version>3.5.2-SNAPSHOT</version>
+            <version>3.5.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>bootstrap3-core</artifactId>
-            <version>3.5.2-SNAPSHOT</version>
+            <version>3.5.2</version>
             <scope>runtime</scope>
         </dependency>
         <!-- end of Jahia Forge Modules -->
