--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -120,7 +120,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>graphql-dxm-provider</artifactId>
-            <version>1.0.3-SNAPSHOT</version>
+            <version>1.0.3</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -240,7 +240,7 @@
             <!-- New Vanity URL dashboard -->
             <groupId>org.jahia.modules</groupId>
             <artifactId>site-settings-seo</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
             <type>jar</type>
             <scope>runtime</scope>
         </dependency>
