--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -130,6 +130,12 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
+            <artifactId>graphql-dxm-provider</artifactId>
+            <version>1.0.3</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
             <artifactId>grid</artifactId>
             <version>7.1.1</version>
             <scope>runtime</scope>
@@ -205,13 +211,21 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>siteSettings</artifactId>
-            <version>7.2.5</version>
+            <version>7.2.6-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>site-settings-publication</artifactId>
             <version>1.0.1</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <!-- New Vanity URL dashboard -->
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>site-settings-seo</artifactId>
+            <version>1.0.1-SNAPSHOT</version>
+            <type>jar</type>
             <scope>runtime</scope>
         </dependency>
         <dependency>
