--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -267,7 +267,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>userDashboard</artifactId>
-            <version>7.1.8</version>
+            <version>7.1.9-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
