--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -60,7 +60,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>assets</artifactId>
-            <version>7.2.2</version>
+            <version>7.2.3-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -163,7 +163,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jquery</artifactId>
-            <version>7.1.2</version>
+            <version>7.1.3-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
