--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -175,7 +175,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>module-manager</artifactId>
-            <version>1.1.4</version>
+            <version>1.1.5-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
