--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -261,7 +261,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>2.1.4</version>
+            <version>2.1.5-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
