--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -72,7 +72,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>calendar</artifactId>
-            <version>2.0.6-SNAPSHOT</version>
+            <version>2.0.6</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -90,7 +90,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>dx-base-demo-core</artifactId>
-            <version>1.0.3-SNAPSHOT</version>
+            <version>1.0.3</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -150,7 +150,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>rating</artifactId>
-            <version>2.0.3-SNAPSHOT</version>
+            <version>2.0.3</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
