--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -60,7 +60,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>assets</artifactId>
-            <version>7.2.3-SNAPSHOT</version>
+            <version>7.2.3</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -102,13 +102,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider</artifactId>
-            <version>3.1.5-SNAPSHOT</version>
+            <version>3.1.5</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-modules</artifactId>
-            <version>3.1.5-SNAPSHOT</version>
+            <version>3.1.5</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -120,7 +120,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-vfs</artifactId>
-            <version>3.1.5-SNAPSHOT</version>
+            <version>3.1.5</version>
        </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
@@ -150,20 +150,20 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>security-filter</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
+            <version>1.0.1</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <!-- RESTful API -->
             <groupId>org.jahia.modules</groupId>
             <artifactId>jcrestapi</artifactId>
-            <version>2.3.3-SNAPSHOT</version>
+            <version>2.3.3</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jquery</artifactId>
-            <version>7.1.3-SNAPSHOT</version>
+            <version>7.1.3</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -175,7 +175,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>module-manager</artifactId>
-            <version>1.1.5-SNAPSHOT</version>
+            <version>1.1.5</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -187,7 +187,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>rolesmanager</artifactId>
-            <version>7.1.6-SNAPSHOT</version>
+            <version>7.1.6</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -205,13 +205,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>serverSettings</artifactId>
-            <version>8.0.5-SNAPSHOT</version>
+            <version>8.0.5</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>siteSettings</artifactId>
-            <version>7.2.6-SNAPSHOT</version>
+            <version>7.2.6</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -243,7 +243,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tags</artifactId>
-            <version>7.1.6-SNAPSHOT</version>
+            <version>7.1.6</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -261,13 +261,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>2.1.5-SNAPSHOT</version>
+            <version>2.1.5</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>userDashboard</artifactId>
-            <version>7.1.9-SNAPSHOT</version>
+            <version>7.1.9</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
