--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -156,7 +156,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>rss</artifactId>
-            <version>2.0.5</version>
+            <version>2.0.6-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
