--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -205,7 +205,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>serverSettings</artifactId>
-            <version>8.0.5</version>
+            <version>8.0.6-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
