--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -91,6 +91,11 @@
             <artifactId>postgresql</artifactId>
             <version>${driver.postgresql.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>${driver.mariadb.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>commons-lang</groupId>
