--- a/package/jdbc-drivers/pom.xml
+++ b/package/jdbc-drivers/pom.xml
@@ -77,6 +77,11 @@
             <artifactId>postgresql</artifactId>
             <version>${driver.postgresql.version}</version>
         </dependency>
+      <dependency>
+          <groupId>org.mariadb.jdbc</groupId>
+          <artifactId>mariadb-java-client</artifactId>
+          <version>${driver.mariadb.version}</version>
+      </dependency>
   </dependencies>
   <build>
       <plugins>
