--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -193,7 +193,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>search</artifactId>
-            <version>7.2.3</version>
+            <version>7.2.4-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
